// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table :props :props.bordered, :props:hover, :props.stripe, :props.size, :props.verticalAlign, :props.height height = 100 1`] = `
<div>
  <div class="t-table t-table__header--fixed">
    <div class="t-table-content" style="overflow: auto;">
      <div class="t-table__header" style="width: 100%;">
        <table style="table-layout: fixed;">
          <colgroup>
            <col>
            <col>
            <col>
          </colgroup>
          <thead columnsprops="[object Object],[object Object],[object Object]">
            <tr>
              <td class="" key="id" colspan="1" rowspan="1">id</td>
              <td class="" key="type" colspan="1" rowspan="1">类型</td>
              <td class="" key="value" colspan="1" rowspan="1">取值</td>
            </tr>
          </thead>
        </table>
      </div>
      <div class="t-table__body" style="max-height: 100px;">
        <table style="table-layout: fixed;">
          <colgroup>
            <col>
            <col>
            <col>
          </colgroup>
          <tbody class="table-body">
            <tr class="">
              <td class="" key="id" length="3">1</td>
              <td class="" key="type" length="3">Number</td>
              <td class="" key="value" length="3">1</td>
            </tr>
            <tr class="">
              <td class="" key="id" length="3">2</td>
              <td class="" key="type" length="3">Number</td>
              <td class="" key="value" length="3">2</td>
            </tr>
          </tbody>
          <tfoot></tfoot>
        </table>
      </div>
    </div>
    <div class="t-table-pagination">
      <!---->
    </div>
  </div>
</div>
`;

exports[`Table :props :props.bordered, :props:hover, :props.stripe, :props.size, :props.verticalAlign, :props.height size = "large", verticalAlign="top" 1`] = `
<div>
  <div class="t-table t-size-l t-table-valign__top">
    <div class="t-table-content" style="overflow: auto;">
      <table style="table-layout: fixed;">
        <colgroup></colgroup>
        <thead columnsprops="">
          <tr></tr>
        </thead>
        <tbody class="table-body"></tbody>
        <tfoot>
          <tr>
            <td colspan="0">
              <div class="t-table--empty">暂无数据</div>
            </td>
          </tr>
        </tfoot>
      </table>
    </div>
    <div class="t-table-pagination">
      <!---->
    </div>
  </div>
</div>
`;

exports[`Table :props :props.bordered, :props:hover, :props.stripe, :props.size, :props.verticalAlign, :props.height size = "medium", verticalAlign="bottom" 1`] = `
<div>
  <div class="t-table t-table-valign__bottom">
    <div class="t-table-content" style="overflow: auto;">
      <table style="table-layout: fixed;">
        <colgroup></colgroup>
        <thead columnsprops="">
          <tr></tr>
        </thead>
        <tbody class="table-body"></tbody>
        <tfoot>
          <tr>
            <td colspan="0">
              <div class="t-table--empty">暂无数据</div>
            </td>
          </tr>
        </tfoot>
      </table>
    </div>
    <div class="t-table-pagination">
      <!---->
    </div>
  </div>
</div>
`;

exports[`Table :props :props.bordered, :props:hover, :props.stripe, :props.size, :props.verticalAlign, :props.height size = "small", verticalAlign="middle" 1`] = `
<div>
  <div class="t-table t-table--bordered t-table--striped t-table--hoverable t-size-s">
    <div class="t-table-content" style="overflow: auto;">
      <table style="table-layout: fixed;">
        <colgroup>
          <col>
          <col>
          <col>
        </colgroup>
        <thead columnsprops="[object Object],[object Object],[object Object]">
          <tr>
            <td class="" key="id" colspan="1" rowspan="1">id</td>
            <td class="" key="type" colspan="1" rowspan="1">类型</td>
            <td class="" key="value" colspan="1" rowspan="1">取值</td>
          </tr>
        </thead>
        <tbody class="table-body">
          <tr class="">
            <td class="" key="id" length="3">1</td>
            <td class="" key="type" length="3">Number</td>
            <td class="" key="value" length="3">1</td>
          </tr>
          <tr class="">
            <td class="" key="id" length="3">2</td>
            <td class="" key="type" length="3">Number</td>
            <td class="" key="value" length="3">2</td>
          </tr>
        </tbody>
        <tfoot></tfoot>
      </table>
    </div>
    <div class="t-table-pagination">
      <!---->
    </div>
  </div>
</div>
`;

exports[`Table :props :props.columns \`columns\` is undefined 1`] = `
<div>
  <div class="t-table">
    <div class="t-table-content" style="overflow: auto;">
      <table style="table-layout: fixed;">
        <colgroup></colgroup>
        <thead columnsprops="">
          <tr></tr>
        </thead>
        <tbody class="table-body"></tbody>
        <tfoot>
          <tr>
            <td colspan="0">
              <div class="t-table--empty">暂无数据</div>
            </td>
          </tr>
        </tfoot>
      </table>
    </div>
    <div class="t-table-pagination">
      <!---->
    </div>
  </div>
</div>
`;

exports[`Table :props :props.columns \`columns\` with align, width, minWidth and ellipsis 1`] = `
<div>
  <div class="t-table">
    <div class="t-table-content" style="overflow: auto;">
      <table style="table-layout: fixed;">
        <colgroup>
          <col style="width: 100px; min-width: 200px;">
          <col>
          <col>
        </colgroup>
        <thead columnsprops="[object Object],[object Object],[object Object]">
          <tr>
            <td class="align-left text-ellipsis" key="id" style="overflow: hidden;" colspan="1" rowspan="1">id</td>
            <td class="" key="type" colspan="1" rowspan="1">类型</td>
            <td class="" key="value" colspan="1" rowspan="1">取值</td>
          </tr>
        </thead>
        <tbody class="table-body">
          <tr class="">
            <td class="align-left text-ellipsis" key="id" style="overflow: hidden;" length="3">1</td>
            <td class="" key="type" length="3">Number</td>
            <td class="" key="value" length="3">1</td>
          </tr>
          <tr class="">
            <td class="align-left text-ellipsis" key="id" style="overflow: hidden;" length="3">2</td>
            <td class="" key="type" length="3">Number</td>
            <td class="" key="value" length="3">2</td>
          </tr>
        </tbody>
        <tfoot></tfoot>
      </table>
    </div>
    <div class="t-table-pagination">
      <!---->
    </div>
  </div>
</div>
`;

exports[`Table :props :props.columns \`columns\` with children 1`] = `
<div>
  <div class="t-table">
    <div class="t-table-content" style="overflow: auto;">
      <table style="table-layout: fixed;">
        <colgroup>
          <col>
          <col>
        </colgroup>
        <thead columnsprops="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]">
          <tr>
            <td class="" colspan="4" rowspan="1">属性及说明</td>
            <td class="" colspan="2" rowspan="1">属性及说明</td>
          </tr>
          <tr>
            <td class="align-left text-ellipsis test" key="platform" style="overflow: hidden;" colspan="1" rowspan="2">平台</td>
            <td class="" colspan="3" rowspan="1">类型及默认值</td>
            <td class="align-left text-ellipsis test2" key="property" style="overflow: hidden;" colspan="1" rowspan="2">属性</td>
            <td class="align-left text-ellipsis row" key="description" style="overflow: hidden;" colspan="1" rowspan="2">说明</td>
          </tr>
          <tr>
            <td class="align-left text-ellipsis row" key="type" style="overflow: hidden;" colspan="1" rowspan="1">类型</td>
            <td class="align-left text-ellipsis test4" key="default" style="overflow: hidden;" colspan="1" rowspan="1">默认值</td>
            <td class="align-left text-ellipsis test3" key="needed" style="overflow: hidden;" colspan="1" rowspan="1">是否必传</td>
          </tr>
        </thead>
        <tbody class="table-body">
          <tr class="">
            <td class="align-left text-ellipsis test" key="platform" style="overflow: hidden;" length="6">公有</td>
            <td class="align-left text-ellipsis row" key="type" style="overflow: hidden;" length="6">any[]</td>
            <td class="align-left text-ellipsis test4" key="default" style="overflow: hidden;" length="6">[]</td>
            <td class="align-left text-ellipsis test3" key="needed" style="overflow: hidden;" length="6">Y</td>
            <td class="align-left text-ellipsis test2" key="property" style="overflow: hidden;" length="6">data</td>
            <td class="align-left text-ellipsis row" key="description" style="overflow: hidden;" length="6">数据源</td>
          </tr>
          <tr class="">
            <td class="align-left text-ellipsis test" key="platform" style="overflow: hidden;" length="6">公有</td>
            <td class="align-left text-ellipsis row" key="type" style="overflow: hidden;" length="6">String</td>
            <td class="align-left text-ellipsis test4" key="default" style="overflow: hidden;" length="6">-1</td>
            <td class="align-left text-ellipsis test3" key="needed" style="overflow: hidden;" length="6">Y</td>
            <td class="align-left text-ellipsis test2" key="property" style="overflow: hidden;" length="6">rowkey</td>
            <td class="align-left text-ellipsis row" key="description" style="overflow: hidden;" length="6">指定rowkey</td>
          </tr>
        </tbody>
        <tfoot></tfoot>
      </table>
    </div>
    <div class="t-table-pagination">
      <!---->
    </div>
  </div>
</div>
`;

exports[`Table :props :props.columns \`columns\` with fixed column 1`] = `
<div>
  <div class="t-table t-table__cell--fixed t-table--has-fixed">
    <div class="t-table-content" style="overflow: auto;">
      <table style="table-layout: fixed;">
        <colgroup>
          <col>
          <col>
          <col>
        </colgroup>
        <thead columnsprops="[object Object],[object Object],[object Object]">
          <tr>
            <td class="t-table__cell--fixed-left" key="id" style="position: sticky; left: 0px;" colspan="1" rowspan="1">id</td>
            <td class="" key="type" colspan="1" rowspan="1">类型</td>
            <td class="" key="value" colspan="1" rowspan="1">取值</td>
          </tr>
        </thead>
        <tbody class="table-body">
          <tr class="">
            <td class="t-table__cell--fixed-left" key="id" style="position: sticky; left: 0px;" length="3">1</td>
            <td class="" key="type" length="3">Number</td>
            <td class="" key="value" length="3">1</td>
          </tr>
          <tr class="">
            <td class="t-table__cell--fixed-left" key="id" style="position: sticky; left: 0px;" length="3">2</td>
            <td class="" key="type" length="3">Number</td>
            <td class="" key="value" length="3">2</td>
          </tr>
        </tbody>
        <tfoot></tfoot>
      </table>
    </div>
    <div class="t-table-pagination">
      <!---->
    </div>
  </div>
</div>
`;
